--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 if you hit submit with an empty field it breaks the app and the only way i know to fix it is to redeploy. make a slight change to this file if you want to redeploy.
 
 a multi-container application using docker-compose, and not kubernetes.
+
+add lines here if you want to test redeploys
+testing
